<resources>
    <string name="app_name">sewa mobil</string>
    <string name="manifest_welcome">Welcome to De Rental</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_btn">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="login_btn">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="repeat_password">Repeat password</string>
</resources>