<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <!-- Name input -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                app:startIconDrawable="@drawable/ic_person"
                app:startIconTint="@android:color/white"
                app:boxBackgroundMode="filled"
                app:boxBackgroundColor="@color/blue_light">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:autofillHints="name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Email input -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@android:color/white"
                app:boxBackgroundMode="filled"
                app:boxBackgroundColor="@color/blue_light">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password input -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                app:startIconDrawable="@drawable/ic_password"
                app:endIconMode="password_toggle"
                app:startIconTint="@android:color/white"
                app:boxBackgroundMode="filled"
                app:boxBackgroundColor="@color/blue_light">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:autofillHints="password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Confirm Password input -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:startIconDrawable="@drawable/ic_password_repeat"
                app:endIconMode="password_toggle"
                app:startIconTint="@android:color/white"
                app:boxBackgroundMode="filled"
                app:boxBackgroundColor="@color/blue_light">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/repeat_password"
                    android:autofillHints="password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_btn"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/blue_dark"
                android:layout_marginBottom="24dp"
                android:padding="14dp"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:background="@drawable/button_border" />

            <!-- Link to login page -->
            <TextView
                android:id="@+id/tvGoToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account_login"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_marginTop="16dp" />
        </LinearLayout>
    </ScrollView>
</layout>
